@@ -1,3 +1,8 @@
+Travel::Status::DE::DBRIS 0.20 - Sun Dec 28 2025
+
+    * Formation::Group: Update carriage name list (patch by Lili Chelsea Urban)
+    * Fix a variety of uninitialized value warnings
+
 Travel::Status::DE::DBRIS 0.19 - Sun Dec 14 2025
 
     * DBRIS->new, ->new-p: Add optional num_vias key
